Support installation in CMake.

--- a/ABACUS.develop/cmake/CMakeLists.txt
+++ b/ABACUS.develop/cmake/CMakeLists.txt
@@ -463,3 +463,8 @@ target_link_libraries(${ABACUS_BIN_NAME}
     Threads::Threads
 )
 
+install(PROGRAMS ${ABACUS_BIN_NAME}
+    TYPE BIN
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
+    RENAME ${PROJECT_NAME}
+)
