--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,32 @@
 on: [push, pull_request]
-env:
-  PREFIX: ABACUS.develop
-  BIN: ABACUS
 jobs:
   build_dockerfile:
     runs-on: ubuntu-latest
     continue-on-error: true
+    if: ${{ github.repository_owner == 'deepmodeling' }}
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.PAT }}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/darelbeida/abacus_debian10_gnu:latest
-          cache-from: type=registry,ref=ghcr.io/darelbeida/abacus_debian10_gnu:latest
+          push: true
+          tags: ghcr.io/deepmodeling/abacus-development-kit:gcc8
+          cache-from: type=registry,ref=ghcr.io/deepmodeling/abacus-development-kit:gcc8
           cache-to: type=inline
 
   build_and_test:
     runs-on: ubuntu-latest
-    container: ghcr.io/darelbeida/abacus_debian10_gnu:latest
+    container: ghcr.io/deepmodeling/abacus-development-kit:gcc8
     needs: build_dockerfile
+    env:
+      PREFIX: ABACUS.develop
+      BIN: ABACUS
     steps:
       - name: Download source codes
         uses: actions/checkout@v2
