--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,14 @@ jobs:
   build_dockerfile:
     runs-on: ubuntu-latest
     continue-on-error: true
-    if: ${{ github.repository_owner == 'deepmodeling' }}
+    #if: ${{ github.repository_owner == 'deepmodeling' }}
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          #username: ${{ github.repository_owner }}
+          username: deepmodeling
           password: ${{ secrets.PAT }}
       - name: Build and push
         id: docker_build
