--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -12,6 +12,8 @@ jobs:
   build_container_and_push:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - uses: docker/login-action@v1
         with:
           registry: ghcr.io
