--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(module_symmetry)
 add_subdirectory(module_neighbor)
 add_subdirectory(module_orbital)
 add_subdirectory(module_md)
+add_subdirectory(module_surchem)
 add_subdirectory(module_deepks)
 add_subdirectory(module_xc)
 add_subdirectory(module_esolver)
