--- a/source/module_deepks/test/CMakeLists.txt
+++ b/source/module_deepks/test/CMakeLists.txt
@@ -8,7 +8,7 @@ target_link_libraries(
     test_deepks
     base cell symmetry md surchem xc
     neighbor orb io ions gint lcao parallel mrrr pdiag pw ri driver esolver hsolver psi elecstate hamilt planewave
-    pthread
+    pthread genelpa
     deepks
     ${ABACUS_LINK_LIBRARIES}
 )
